--- a/volume_1.org
+++ b/volume_1.org
@@ -74,10 +74,10 @@ Leetcode hard. A binary search problem.
 	(setf left2 (if (zerop idx2)
 			most-negative-fixnum
 			(aref vec2 (- idx2 1))))
-	(setf right1 (if (zerop idx1)
+	(setf right1 (if (= n1 idx1)
 			most-positive-fixnum
 			(aref vec1 idx1)))
-	(setf right2 (if (zerop idx2)
+	(setf right2 (if (= n2 idx2)
 			 most-positive-fixnum
 			 (aref vec2 idx2)))
 	(cond
@@ -95,4 +95,29 @@ Leetcode hard. A binary search problem.
     (if (< (length vec1) (length vec2))
 	(solve vec2 vec1)
 	(solve vec1 vec2)))
+#+end_src
+
+* 5. Longest Palindrome
+I found out the hard way that 0 is truthy. If :initial-element is not used, the new array is all zeroes.
+#+begin_src lisp :tangle solutions/longest-palindrome.lisp
+  (defun longest-palindrome (s)
+  (let* ((n (length s))
+	 (dp (make-array (list n n) :initial-element nil))
+	 (retval 0))
+    (loop for i from 0 to (1- n) do
+      (setf (aref dp i i) t)
+      (unless (= i (1- n))
+	(setf (aref dp i (1+ i))
+	    (if
+	     (char= (char s i) (char s (1+ i)))
+	     t nil))))
+    (loop for i from 0 to (1- n) do
+      (loop for j from i to (1- n) do
+	    (when (or (aref dp i j)
+		   (and
+		    (aref dp (1+ i) (1- j))
+		    (char= (char s i) (char s j))))
+		 (setf (aref dp i j) t)
+		 (setf retval (max retval (1+ (- j i)))))))
+  retval))
 #+end_src
