add leetcode solution 10

--- a/volume_1.org
+++ b/volume_1.org
@@ -294,3 +294,53 @@ Horrible question
       (let (s (princ-to-string intinput))
 	(eq s (reverse s)))))
 #+end_src
+
+* 10. Regular expressions
+You could do this with the excellent [[https://github.com/isoraqathedh/cl-simple-fsm/][finite-state-machine]] library,
+but I'm trying to achieve as much as I can without using quicklisp.
+Here we see our first recursive solution.
+Using a :keyword as a pseudo-option type.
+#+begin_src lisp :tangle solutions/regular-expression.lisp
+(defun small-matcher (expr s)
+  (cond
+    ((string= s expr)
+     t)
+    ((string= expr "")
+     nil)
+    ((and (string= s "")
+	  (string= expr ".*"))
+     t)
+    ((string= s "")
+     nil)
+    ((and (= (length s) 1) (string= expr "."))
+     t)
+    ((= (length expr) 1)
+     nil)
+    (t :continue)))
+
+(defun is-match (expr s)
+  (let ((matchres (small-matcher expr s)))
+    (if
+     (not (eq matchres :continue))
+     matchres
+     (if
+      (char/= #\* (aref expr 1))
+      (if (or
+	   (char= (aref expr 0) #\.)
+	   (char= (aref expr 0) (aref s 0)))
+	  (is-match
+	   (subseq expr 1)
+	   (subseq s 1))
+	  nil)
+      (if
+       (or
+	(char= (aref expr 0) #\.)
+	(char= (aref expr 0)
+	       (aref s 0)))
+       (or
+	(is-match expr
+		  (subseq s 1))
+	(is-match (subseq expr 2)
+		  (subseq s 1)))
+       (is-match (subseq expr 2) s))))))
+#+end_src
