solution to question 11

--- a/volume_1.org
+++ b/volume_1.org
@@ -344,3 +344,29 @@ Using a :keyword as a pseudo-option type.
 		    (subseq s 1)))
 	 (is-match (subseq expr 2) s))))))
 #+end_src
+
+* 11. Container with water
+Greedy algorithm, first use of vectors
+in this series
+#+begin_src lisp :tangle solutions/container-with-water.lisp
+  (defun container-with-water (bars)
+    "find the maximum amount of water that can be
+  fit between any two bars in the vector BARS."
+    (loop :with start = 0
+	  :with end = (1- (length bars))
+	  :with curmax = 0
+	  :while (<= start end)
+	  :do
+	     (setf curmax
+		   (max curmax
+			(* (- end start)
+			   (min (aref bars start)
+				(aref bars end)))))
+	  :if (< (aref bars start)
+		 (aref bars end))
+	    :do (setf start (1+ start))
+	  :else
+	    :do (setf end (1- end))
+	  :finally
+	     (return curmax)))
+#+end_src
