bonus solution: roman to integer

--- a/volume_1.org
+++ b/volume_1.org
@@ -370,3 +370,42 @@ in this series
 	  :finally
 	     (return curmax)))
 #+end_src
+* 11 (bonus). Roman to integer
+Accidentally implemented this instead of the inverse, so here you go.
+Using destructuring within the loop macro to great effect.
+#+begin_src lisp :tangle solutions/roman-to-integer.lisp
+  (defun string-prefix? (prefix str)
+    (if (< (length str) (length prefix))
+	nil
+	(loop :for pchar :across prefix
+	      :for schar :across str
+	      :when (char/= pchar schar)
+		:return nil
+	      :finally (return t))))
+
+  (defun integer-to-roman (roman-string)
+    (loop :with sum = 0
+	  :with str = roman-string
+	  :do
+	     (loop :for (prefix . value)
+		     :in
+		   '(("IV" . 4)
+		     ("IX" . 9)
+		     ("XL" . 40)
+		     ("XC" . 90)
+		     ("CD" . 400)
+		     ("CM" . 900)
+		     ("I"  . 1)
+		     ("V"  . 5)
+		     ("X"  . 10)
+		     ("L"  . 50)
+		     ("C"  . 100)
+		     ("D"  . 500)
+		     ("M"  . 1000))
+		   :when (string-prefix? prefix str)
+		     :do (setf sum (+ sum value))
+			 (setf str (subseq str (length prefix)))
+			 (return))
+	  :when (string= str "")
+	    :return sum))
+#+end_src
