--- a/volume_1.org
+++ b/volume_1.org
@@ -383,7 +383,7 @@ Using destructuring within the loop macro to great effect.
 		:return nil
 	      :finally (return t))))
 
-  (defun integer-to-roman (roman-string)
+  (defun roman-to-integer (roman-string)
     (loop :with sum = 0
 	  :with str = roman-string
 	  :do
