indentation in solution 3

--- a/volume_1.org
+++ b/volume_1.org
@@ -54,8 +54,8 @@ Earlier [[https://github.com/crmsnbleyd/cl-leetcode/commit/a4ff57de2d306a5dcf32e
 		 :while (char/= (char s curr) (char s i))
 		 :do (remhash (char s curr) seen)
 		 :finally (setf start (1+ curr)))
-	  :else :do
-	    (setf (gethash (char s i) seen) t)
+	  :else
+	    :do (setf (gethash (char s i) seen) t)
 	  :when (> (1+ (- i start)) (length res))
 	     :do (setf res (subseq s start (1+ i)))
 	  :finally (return res)))
