solution to leetcode 17 letter combinations of phone number

--- a/volume_1.org
+++ b/volume_1.org
@@ -574,3 +574,34 @@ Greedy algorithm, with an escape hatch if the sum is equal to target.
 	   a b))
      l :initial-value most-positive-fixnum))
 #+end_src
+
+* 17. Letter combinations of a Phone Number
+Mapcan only works for lists, so we need to convert "abc" for instance to '(#\a #\b #\c).
+#+begin_src lisp :tangle solutions/letter-combinations.lisp
+  (defun fill-number-letter-map ()
+    (let
+	((number-letter-map (make-hash-table)))
+      (setf (gethash  #\2 number-letter-map) "abc")
+      (setf (gethash  #\3 number-letter-map) "def")
+      (setf (gethash  #\4 number-letter-map) "ghi")
+      (setf (gethash  #\5 number-letter-map) "jkl")
+      (setf (gethash  #\6 number-letter-map) "mno")
+      (setf (gethash  #\7 number-letter-map) "pqrs")
+      (setf (gethash  #\8 number-letter-map) "tuv")
+      (setf (gethash  #\9 number-letter-map) "wxyz")
+      number-letter-map))
+
+  (defun letter-combinations (strinput)
+    (let ((number-letter-map (fill-number-letter-map)))
+      (reduce
+       (lambda (prev-letter-combinations numchar)
+	 (mapcan
+	  (lambda (ch)
+	    (map
+	     'list
+	     (lambda (prev-list-item)
+	       (concatenate 'string prev-list-item (string ch)))
+	     prev-letter-combinations))
+	  (map 'list 'identity (gethash numchar number-letter-map))))
+       strinput :initial-value (list (list)))))
+#+end_src
